--- a/hm-dianping-init/src/main/resources/application.yaml
+++ b/hm-dianping-init/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   application:
     name: hmdp
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC #127.0.0.1是本机地址
     username: root
     password: root
